--- a/index.html
+++ b/index.html
@@ -1,66 +1,77 @@
 <html>  
     <head>
         <title>Bucephalus Studios</title>
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
-    <!--Top of page-->
-    <h1>Bucephalus Studios</h1>
-    <br/>
+    <body>
+        <!--Header layout-->
+        <div id="loaded-header">
+        </div>
 
-    <!-- MAILCHIMP EMAIL LIST SIGNUP FORM -->
-    <div id="mc_embed_shell">
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-        <style type="text/css">
-            #mc_embed_signup {
-                background: #fff;
-                false;
-                clear: left;
-                font: 14px Helvetica, Arial, sans-serif;
-                width: 600px;
-            }
-    
-            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-        </style>
-        <div id="mc_embed_signup">
-            <form
-                action="https://itch.us21.list-manage.com/subscribe/post?u=7c42aee1abcb8f5e88af6fe06&amp;id=4a251f5c49&amp;f_id=0067e6e6f0"
-                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                target="_blank">
-                <div id="mc_embed_signup_scroll">
-                    <h2>Subscribe to updates from Bucephalus Studios</h2>
-                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                    <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span
-                                class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
-                            id="mce-EMAIL" required="" value=""><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-                    </div>
-                    <div id="mce-responses" class="clear foot">
-                        <div class="response" id="mce-error-response" style="display: none;"></div>
-                        <div class="response" id="mce-success-response" style="display: none;"></div>
-                    </div>
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                        /* real people should not fill this in and expect good things - do not remove this or risk form bot
-                        signups */
-                        <input type="text" name="b_7c42aee1abcb8f5e88af6fe06_4a251f5c49" tabindex="-1" value="">
-                    </div>
-                    <div class="optionalParent">
-                        <div class="clear foot">
-                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                value="Subscribe">
-                            <p style="margin: 0px auto;"><a href="http://eepurl.com/iCSD-E"
-                                    title="Mailchimp - email marketing made easy and fun"><span
-                                        style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                                            class="refferal_badge"
-                                            src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                                            alt="Intuit Mailchimp"
-                                            style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                            </p>
+        <!--View-->
+        <!-- MAILCHIMP EMAIL LIST SIGNUP FORM -->
+        <div id="mc_embed_shell">
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+                #mc_embed_signup {
+                    background: #fff;
+                    false;
+                    clear: left;
+                    font: 14px Helvetica, Arial, sans-serif;
+                    width: 600px;
+                }
+        
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup">
+                <form
+                    action="https://itch.us21.list-manage.com/subscribe/post?u=7c42aee1abcb8f5e88af6fe06&amp;id=4a251f5c49&amp;f_id=0067e6e6f0"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank">
+                    <div id="mc_embed_signup_scroll">
+                        <h2>Subscribe to updates from Bucephalus Studios</h2>
+                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                        <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span
+                                    class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
+                                id="mce-EMAIL" required="" value=""><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                        </div>
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display: none;"></div>
+                            <div class="response" id="mce-success-response" style="display: none;"></div>
+                        </div>
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            /* real people should not fill this in and expect good things - do not remove this or risk form bot
+                            signups */
+                            <input type="text" name="b_7c42aee1abcb8f5e88af6fe06_4a251f5c49" tabindex="-1" value="">
+                        </div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                    value="Subscribe">
+                                <p style="margin: 0px auto;"><a href="http://eepurl.com/iCSD-E"
+                                        title="Mailchimp - email marketing made easy and fun"><span
+                                            style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                class="refferal_badge"
+                                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                alt="Intuit Mailchimp"
+                                                style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
+            <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+            <script
+                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         </div>
-        <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-        <script
-            type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-    </div>
+
+        <!-- Add javascript before the footer -->
+        <script type="text/javascript" src="js/headerLoader.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </body>
 </html>
