adding some basic text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         </div>
 
         <!--View-->
+        <div id="view">
+            <p>
+                Welcome to Bucephalus Studios!
+                <br/>
+                A solo indie game development studio creating unconventional, fun games and contributing to free open-source software.
+            </p>
+            <br/>
+            <p>
+                Our current project
+            </p>
+        </div>
         <!-- MAILCHIMP EMAIL LIST SIGNUP FORM -->
         <div id="mc_embed_shell">
             <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
