added the capsule to the index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
             <p>
                 Our current project
             </p>
+            <img src="assets/cultgameCapsule.png">
+            <div>
+                If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
+                <!-- Get a modal working here -->
+            </div>
+            <div id="links">
+                All of our links can be found on <href a="https://linktr.ee/bucephalus_studios">linktree</href>.
+                <br/>
+                <div id="social-media">
+                    
+                </div>
+            </div>
         </div>
         <!-- MAILCHIMP EMAIL LIST SIGNUP FORM -->
         <div id="mc_embed_shell">
