correction to href link on index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- Get a modal working here -->
             </div>
             <div id="links">
-                All of our links can be found on <href a="https://linktr.ee/bucephalus_studios">linktree</href>.
+                All of our links can be found on <a href="https://linktr.ee/bucephalus_studios">linktree</a>.
                 <br/>
                 <div id="social-media">
                     
