trying to load photo on index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>
                 Our current project
             </p>
-            <img src="assets/cultgameCapsule.png">
+            <img src="./assets/cultgameCapsule.png">
             <div>
                 If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 <!-- Get a modal working here -->
