--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 <!-- Get a modal working here -->
                 <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#email-list-signup-form">
-                    Save Progress
+                    Subscribe
                 </button>
                 <div class="modal fade show" id="email-list-signup-form" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: block; padding-left: 0px;" aria-modal="true" role="dialog">
                     <div class="modal-dialog">
@@ -90,6 +90,10 @@
                                         </div>
                                     </form>
                                 </div>
+                                <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+                                <script
+                                    type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
@@ -107,11 +111,6 @@
                     
                 </div>
             </div>
-        </div>
-
-            <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-            <script
-                type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         </div>
 
         <!-- Add javascript before the footer -->
