attempt 3 at the form

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <div id="email-list-signup">
                 If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 <!-- Get a modal working here -->
-                <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#email-list-signup-form">
+                <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#emailSignUpForm">
                     Subscribe
                 </button>
-                <div class="modal fade show" id="email-list-signup-form" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: block; padding-left: 0px;" aria-modal="true" role="dialog">
+                <div class="modal fade show" id="emailSignUpForm" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: block; padding-left: 0px;" aria-modal="true" role="dialog">
                     <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Save progress and finish later</h5>
+                        <h5 class="modal-title" id="exampleModalLabel"></h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
