trying to get bootstrap modal going

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 Our current project
                 <img src="assets/cultgameCapsule.png" width="400px" height="400px" alt="CultGame">
             </div>
-            <div id="email-list-signup">
+            <div id="subscribe-to-updates">
                 If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 <!-- Get a modal working here -->
-                <button id="email-list-signup-form-open-btn" data-bs-toggle="modal" data-bs-target="#emailSignUpForm">
+                <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                     Subscribe
                 </button>
-                <div class="modal fade show" id="emailSignUpForm" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: block; padding-left: 0px;" aria-modal="true" role="dialog">
+                <div class="modal fade show" id="email-sign-up-modal" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: block; padding-left: 0px;" aria-modal="true" role="dialog">
                     <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
