edit the innerhtml of the modal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                     Subscribe
                 </button>
-                <div class="modal fade show" id="email-sign-up-modal" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: block; padding-left: 0px;" aria-modal="true" role="dialog">
+                <div class="modal fade" id="email-sign-up-modal" style="display: none;" tabindex="-1" aria-hidden="true">
                     <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
