adding bootstrap rows and container

--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
         </div>
 
         <!--View-->
-        <div id="view">
-            <div id="welcome-message">
+        <div id="view" class="container-full-width">
+            <div id="welcome-message" class="row g-0">
                 Welcome to Bucephalus Studios!
                 <br/>
                 A solo indie game development studio creating unconventional, fun games and contributing to free open-source software.
             </div>
             <br/>
-            <div id="current-project">
+            <div id="current-project" class="row g-0">
                 Our current project
-                <img src="assets/cultgameCapsule.png" width="400px" height="400px" alt="CultGame">
+                <img src="assets/cultgameCapsule.png" width="400px" height="400px" alt="CultGame"/>
             </div>
-            <div id="subscribe-to-updates">
+            <br/>
+            <div id="subscribe-to-updates" class="row g-0">
                 If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 <!-- Get a modal working here -->
                 <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
