--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br/>
             <div id="current-project" class="row g-0">
                 Our current project
-                <img src="assets/verticalCultGameCapsule.png" alt="CultGame"/>
+                <img src="assets/cultgameCapsule.png" alt="CultGame"/>
             </div>
             <br/>
             <div id="subscribe-to-updates" class="row g-0">
