--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 A solo indie game development studio creating unconventional, fun games and contributing to free open-source software.
             </div>
             <br/>
-            <div id="current-project" class="row g-0">
+            <div id="current-project" class="row g-0 justify-content-center">
                 Our current project
+                <br/>
                 <img src="assets/verticalCultGameCapsule.png" width="10%" height="20%" alt="CultGame"/>
             </div>
             <br/>
