--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
             </div>
             <br/>
             <div id="current-project" class="row g-0 justify-content-center">
-                Our current project
-                <br/>
-                <img src="assets/verticalCultGameCapsule.png" width="10%" height="20%" alt="CultGame"/>
+                <span>Our current project</span>
+                <img src="assets/cultgame-itch-capsule.png" alt="CultGame"/>
             </div>
             <br/>
             <div id="subscribe-to-updates" class="row g-0">
