--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             </div>
             <br/>
             <div id="current-project" class="row g-0 justify-content-center">
-                <span>Our current project</span>
-                <img src="assets/cultgame-itch-capsule.png" alt="CultGame"/>
+                <div class="col">
+                    <span>Our current project</span>
+                    <img src="assets/cultgame-itch-capsule.png" alt="CultGame"/>
+                </div>
             </div>
             <br/>
             <div id="subscribe-to-updates" class="row g-0">
