--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
 
         <!--View-->
-        <div id="view" class="container-full-width">
+        <div id="view" class="container-full-width justify-content-center">
             <div id="welcome-message" class="row g-0">
                 Welcome to Bucephalus Studios!
                 <br/>
@@ -21,7 +21,10 @@
             <br/>
             <div id="current-project" class="row g-0 justify-content-center">
                 <div class="col">
-                    <span>Our current project</span>
+                    Our current project is CultGame -- Create and lead your own cult! A haunting strategy RPG game with ASCII art inspired by Dwarf Fortress,
+                    Warsim, and Dominions.
+                </div>
+                <div class="col">
                     <img src="assets/cultgame-itch-capsule.png" alt="CultGame"/>
                 </div>
             </div>
