sizing of image on hompage

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </div>
             <br/>
             <div id="current-project" class="row g-0 justify-content-center">
-                <div class="col">
+                <div class="col-3">
                     Our current project is CultGame -- Create and lead your own cult! A haunting strategy RPG game with ASCII art inspired by Dwarf Fortress,
                     Warsim, and Dominions.
                 </div>
-                <div class="col">
-                    <img src="assets/cultgame-itch-capsule.png" alt="CultGame"/>
+                <div class="col-3">
+                    <img src="assets/cultgame-itch-capsule.png" width="60%" height="60%" alt="CultGame"/>
                 </div>
             </div>
             <br/>
