--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     Warsim, and Dominions.
                 </div>
                 <div class="col-3">
-                    <img src="assets/cultgame-itch-capsule.png" width="100%" height="100%" alt="CultGame"/>
+                    <img src="assets/cultgame-itch-capsule.png" width="315px" height="250px" alt="CultGame"/>
                 </div>
             </div>
             <br/>
