adding text to col in homepage

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
             <div id="welcome-message" class="row g-0">
-                Welcome to Bucephalus Studios!
-                <br/>
-                A solo indie game development studio creating unconventional, fun games and contributing to free open-source software.
+                <div class="col-4">
+                    Welcome to Bucephalus Studios!
+                    <br/>
+                    A solo indie game development studio creating original, interesting games and contributing to free open-source software.  
+                </div>
             </div>
             <br/>
             <div id="current-project" class="row g-0 justify-content-center">
