--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
-            <div id="welcome-message" class="row g-0">
+            <div id="welcome-message" class="row g-0 justify-content-center">
                 <div class="col-4">
                     Welcome to Bucephalus Studios!
                     <br/>
-                    A solo indie game development studio creating original, interesting games and contributing to free open-source software.  
+                    A solo indie game development studio creating original interesting games and contributing to free open-source software.  
                 </div>
             </div>
             <br/>
@@ -30,13 +30,14 @@
                     <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame"/>
                 </div>
             </div>
-            <br/>
-            <div id="subscribe-to-updates" class="row g-0">
-                If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
-                <!-- Get a modal working here -->
-                <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
-                    Subscribe
-                </button>
+            <div id="subscribe-to-updates" class="row g-0 justify-content-center">
+                <div class="col-4">
+                    If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
+                    <!-- Get a modal working here -->
+                    <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+                        Subscribe
+                    </button>
+                </div>
                 <div class="modal fade" id="email-sign-up-modal" style="display: none;" tabindex="-1" aria-hidden="true">
                     <div class="modal-dialog">
                     <div class="modal-content">
