formatting of subscribe form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
             <div id="welcome-message" class="row g-0 justify-content-center">
-                <div class="col-4">
+                <div class="col-6">
                     Welcome to Bucephalus Studios!
                     <br/>
                     A solo indie game development studio creating original interesting games and contributing to free open-source software.  
@@ -22,22 +22,25 @@
             </div>
             <br/>
             <div id="current-project" class="row g-0 justify-content-center">
-                <div class="col-3">
+                <div class="col-4">
                     Our current project is CultGame -- Create and lead your own cult! A haunting strategy RPG game with ASCII art inspired by Dwarf Fortress,
                     Warsim, and Dominions.
                 </div>
-                <div class="col-3">
+                <div class="col-4">
                     <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame"/>
                 </div>
             </div>
             <div id="subscribe-to-updates" class="row g-0 justify-content-center">
                 <div class="col-4">
                     If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
-                    <!-- Get a modal working here -->
+                </div>
+                <div class="col-4">
                     <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                         Subscribe
                     </button>
                 </div>
+            </div>
+            <div>
                 <div class="modal fade" id="email-sign-up-modal" style="display: none;" tabindex="-1" aria-hidden="true">
                     <div class="modal-dialog">
                     <div class="modal-content">
