--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
             </div>
             <br/>
             <div id="current-project" class="row g-0 justify-content-center">
-                <div class="col-4">
+                <div class="col-3">
                     Our current project is CultGame -- Create and lead your own cult! A haunting strategy RPG game with ASCII art inspired by Dwarf Fortress,
                     Warsim, and Dominions.
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame"/>
                 </div>
             </div>
-            <div id="subscribe-to-updates" class="row g-0 justify-content-center">
-                <div class="col-4">
+            <div id="subscribe-text-div" class="row g-0 justify-content-center">
+                <div class="col-6">
                     If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 </div>
-                <div class="col-4">
+            </div>
+            <div id="subscribe-button-div" class="row g-0 justify-content-center">
+                <div class="col-6">
                     <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                         Subscribe
                     </button>
