--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 </div>
             </div>
             <div id="subscribe-text-div" class="row g-0 justify-content-center">
-                <div class="col-6">
+                <div class="col-6" align="center">
                     If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 </div>
             </div>
             <div id="subscribe-button-div" class="row g-0 justify-content-center">
-                <div class="col-6">
+                <div class="col-6" align="center">
                     <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                         Subscribe
                     </button>
