more padding formatting adding to homepage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
-            <div id="welcome-message" class="row g-0 justify-content-center" style="padding-top : 100px">
+            <div id="welcome-message" class="row g-0 justify-content-center" style="padding-top : 60px">
                 <div class="col-6">
                     Welcome to Bucephalus Studios!
                     <br/>
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <br/>
-            <div id="current-project" class="row g-0 justify-content-center" style="padding-top : 100px">
+            <div id="current-project" class="row g-0 justify-content-center" style="padding-top : 60px">
                 <div class="col-3">
                     Our current project is CultGame -- Create and lead your own cult! A haunting strategy RPG game with ASCII art inspired by Dwarf Fortress,
                     Warsim, and Dominions.
@@ -30,7 +30,7 @@
                     <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame"/>
                 </div>
             </div>
-            <div id="subscribe-text-div" class="row g-0 justify-content-center" style="padding-top : 100px">
+            <div id="subscribe-text-div" class="row g-0 justify-content-center" style="padding-top : 60px">
                 <div class="col-6" align="center">
                     If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
                 </div>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <div id="links">
+            <div id="links" class="row g-0 justify-content-center" style="padding-top : 60px">
                 All of our links can be found on <a href="https://linktr.ee/bucephalus_studios">linktree</a>.
                 <br/>
                 <div id="social-media">
