formatting of links on homepage

--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
                 </div>
             </div>
             <div id="links" class="row g-0 justify-content-center" style="padding-top : 60px">
-                All of our links can be found on <a href="https://linktr.ee/bucephalus_studios">linktree</a>.
-                <br/>
-                <div id="social-media">
-                    
+                <div class="col-6">
+                    All of our links can be found on <a href="https://linktr.ee/bucephalus_studios">linktree</a>.
+                    <br/>
+                    <div id="social-media">
+                        Social media
+                    </div>
                 </div>
             </div>
         </div>
