adjusting border radii

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Warsim, and Dominions.
                 </div>
                 <div class="col-3">
-                    <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame"/>
+                    <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame" style="border-radius: 5px;"/>
                 </div>
             </div>
             <div id="subscribe-text-div" class="row g-0 justify-content-center" style="padding-top : 60px">
@@ -111,11 +111,11 @@
                 </div>
             </div>
             <div id="links" class="row g-0 justify-content-center" style="padding-top : 60px">
-                <div class="col-6">
+                <div class="col-6" align="center">
                     All of our links can be found on <a href="https://linktr.ee/bucephalus_studios">linktree</a>.
                     <br/>
-                    <div id="social-media">
-                        Social media
+                    <div id="social-media" align="left">
+                        
                     </div>
                 </div>
             </div>
