--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
             <div id="welcome-message" class="row g-0 justify-content-center" style="padding-top : 60px">
-                <div class="col-6">
+                <div class="col-6" align="center">
                     Welcome to Bucephalus Studios!
                     <br/>
                     A solo indie game development studio creating original interesting games and contributing to free open-source software.  
@@ -26,8 +26,8 @@
                     Our current project is CultGame -- Create and lead your own cult! A haunting strategy RPG game with ASCII art inspired by Dwarf Fortress,
                     Warsim, and Dominions.
                 </div>
-                <div class="col-3">
-                    <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame" style="border-radius: 5px;"/>
+                <div class="col-3" align="center">
+                    <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame" style="border-radius: 10px;"/>
                 </div>
             </div>
             <div id="subscribe-text-div" class="row g-0 justify-content-center" style="padding-top : 60px">
@@ -112,11 +112,7 @@
             </div>
             <div id="links" class="row g-0 justify-content-center" style="padding-top : 60px">
                 <div class="col-6" align="center">
-                    All of our links can be found on <a href="https://linktr.ee/bucephalus_studios">linktree</a>.
-                    <br/>
-                    <div id="social-media" align="left">
-                        
-                    </div>
+                    All of our links, social media accounts, and more can be found on <a href="https://linktr.ee/bucephalus_studios">here on linktree</a>.
                 </div>
             </div>
         </div>
