--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>  
     <head>
-        <title>Bucephalus Studios</title>
+        <title>Bucephalus Studios - Home</title>
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <!-- Site Style -->
+        <link href="assets/style.css">
     </head>
     <body>
         <!--Header layout-->
