testing nav out

--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
     </head>
     <body>
         <!--Header layout-->
-        <div id="loaded-header">
+        <!-- <div id="loaded-header">
+        </div> -->
+        <div id="header">
+            <h1>Bucephalus Studios</h1>
+            <br/>
+            <!-- Navbar -->
+            <ul class="siteNav">
+                <li class="siteNavItem">
+                    Home
+                </li>
+                <li class="siteNavItem">
+                    About
+                </li>
+                <li class="siteNavItem">
+                    Games
+                </li>
+                <li class="siteNavItem">
+                    Software
+                </li>
+                <li class="siteNavItem">
+                    Contact
+                </li>
+                <!--
+                <div class="navbarItem">
+                    Shop
+                </div>
+                <div class="navbarItem">
+                    Donate
+                </div>
+                -->
+            </ul>
         </div>
 
         <!--View-->
