--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>  
     <head>
         <title>Bucephalus Studios - Home</title>
@@ -6,7 +7,7 @@
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <!-- Site Style -->
-        <link href="assets/style.css">
+        <link rel="stylesheet" href="assets/style.css">
     </head>
     <body>
         <!--Header layout-->
