--- a/index.html
+++ b/index.html
@@ -11,67 +11,64 @@
     </head>
     <body>
         <!--Header layout-->
-        <!-- <div id="loaded-header">
-        </div> -->
-        <div id="header">
-            <h1>Bucephalus Studios</h1>
-            <br/>
-            <!-- Navbar -->
-            <ul class="siteNav">
-                <li class="siteNavItem">
-                    Home
-                </li>
-                <li class="siteNavItem">
-                    About
-                </li>
-                <li class="siteNavItem">
-                    Games
-                </li>
-                <li class="siteNavItem">
-                    Software
-                </li>
-                <li class="siteNavItem">
-                    Contact
-                </li>
-                <!--
-                <div class="navbarItem">
-                    Shop
-                </div>
-                <div class="navbarItem">
-                    Donate
-                </div>
-                -->
-            </ul>
+        <div id="loaded-header">
         </div>
 
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
-            <div id="welcome-message" class="row g-0 justify-content-center" style="padding-top : 60px">
-                <div class="col-6" align="center">
-                    Welcome to Bucephalus Studios!
+            <div id="welcome-message" class="row g-0 justify-content-center"
+                style="margin-top : 40px">
+                <div class="col-6">
+                    <div align="center">
+                        <span>
+                            Welcome to Bucephalus Studios!
+                        </span>
+                    </div>
                     <br/>
-                    A solo indie game development studio creating original interesting games and contributing to free open-source software.  
+                    <p align="left">
+                        A solo indie game development studio from Ohio creating weird games and contributing to free open-source software. 
+                    </p>
                 </div>
             </div>
-            <br/>
-            <div id="current-project" class="row g-0 justify-content-center" style="padding-top : 60px">
-                <div class="col-3">
-                    Our current project is CultGame -- Create and lead your own cult! A haunting strategy RPG game with ASCII art inspired by Dwarf Fortress,
-                    Warsim, and Dominions.
+            <div id="current-project" class="row g-0 justify-content-center" 
+                style="margin-top : 40px;"
+            >
+                <div class="col-4 d-flex align-items-center"> <!-- d-flex align-items-center -->
+                    <div>
+                        <div>
+                            <span>
+                                Create your own cult, perform demonic rituals, and amass a following that threatens empires.
+                                <span style="font-weight: bold;">It's time to play god.</span> CultGame is a retro strategy RPG where you start your own religion in
+                                a procedurally generated fantasy world complete with haunting ASCII graphics.
+                            </span>
+                            <br/>
+                            <br/>
+                        </div>
+                        <div align="center">
+                            <span class="consoleYellow">
+                                Currently in development! Follow our progress on itch.
+                            </span>
+                            <a href="https://bucephalus.itch.io/cultgame">
+                                <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-3" align="center">
-                    <img src="assets/cultgame-itch-capsule.png" width="394px" height="313px" alt="CultGame" style="border-radius: 10px;"/>
+                <div class="col-4" align="center">
+                    <img src="assets/cultgame-itch-capsule.png" alt="CultGame" style="border-radius: 10px;"/>
                 </div>
             </div>
-            <div id="subscribe-text-div" class="row g-0 justify-content-center" style="padding-top : 60px">
+            <div id="subscribe-text-div" class="row g-0 justify-content-center"
+                style="margin-top : 40px">
                 <div class="col-6" align="center">
-                    If you'd like to hear about any updates to our projects, let's stay in touch! Subscribe to our newsletter.
+                    If you'd like to hear about any updates to our projects, let's stay in touch! 
                 </div>
             </div>
-            <div id="subscribe-button-div" class="row g-0 justify-content-center">
+            <div id="subscribe-button-div" class="row g-0 justify-content-center"
+                style="margin-top : 10px">
                 <div class="col-6" align="center">
-                    <button id="email-list-signup-form-open-btn" class="btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
-                        Subscribe
+                    <button id="email-list-signup-form-open-btn" class="standardButton" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+                        Subscribe to our newsletter
                     </button>
                 </div>
             </div>
@@ -150,8 +147,13 @@
             </div>
         </div>
 
-        <!-- Add javascript before the footer -->
+
+        <div id="loaded-footer">
+        </div>
+        
+        <!-- Add javascript before the end of the body -->
         <script type="text/javascript" src="js/headerLoader.js"></script>
+        <script type="text/javascript" src="js/footerLoader.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
