--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <!-- Site Style -->
         <link rel="stylesheet" href="assets/style.css">
+        <!-- Mailchimp form style -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+                                <style type="text/css">
+                                    #mc_embed_signup {
+                                        background: #fff;
+                                        clear: left;
+                                        font: 14px Helvetica, Arial, sans-serif;
+                                        width: 100%;
+                                    }
+                            
+                                    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                                        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                                </style>
     </head>
     <body>
         <!--Header layout-->
@@ -83,18 +96,6 @@
                         <div class="modal-body">
                            <!-- MAILCHIMP EMAIL LIST SIGNUP FORM -->
                             <div id="mc_embed_shell">
-                                <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-                                <style type="text/css">
-                                    #mc_embed_signup {
-                                        background: #fff;
-                                        clear: left;
-                                        font: 14px Helvetica, Arial, sans-serif;
-                                        width: 100%;
-                                    }
-                            
-                                    /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                                        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                                </style>
                                 <div id="mc_embed_signup">
                                     <form
                                         action="https://itch.us21.list-manage.com/subscribe/post?u=7c42aee1abcb8f5e88af6fe06&amp;id=4a251f5c49&amp;f_id=0067e6e6f0"
