changing color of form text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                                 <style type="text/css">
                                     #mc_embed_signup {
                                         background: #fff;
+                                        color: #000;
                                         clear: left;
                                         width: 100%;
                                     }
@@ -141,7 +142,7 @@
             </div>
             <div id="links" class="row g-0 justify-content-center" style="padding-top : 60px">
                 <div class="col-6" align="center">
-                    All of our links, social media accounts, and more can be found on <a href="https://linktr.ee/bucephalus_studios">here on linktree</a>.
+                    All of our links, social media accounts, and more can be found on <a class="consoleCyan" href="https://linktr.ee/bucephalus_studios">here on linktree</a>.
                 </div>
             </div>
         </div>
