coloring text for fun

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <br/>
                     <p align="left">
-                        A solo indie game development studio from Ohio creating weird games and contributing to free open-source software. 
+                        A solo indie game development studio from Ohio creating original games and contributing to free open-source software. 
                     </p>
                 </div>
             </div>
@@ -51,8 +51,8 @@
                         <div>
                             <span>
                                 Create your own cult, perform demonic rituals, and amass a following that threatens empires.
-                                <span style="font-weight: bold;">It's time to play god.</span> CultGame is a retro strategy RPG where you start your own religion in
-                                a procedurally generated fantasy world complete with haunting ASCII graphics.
+                                <span class="consoleRed">It's time to play god.</span> CultGame is a retro strategy RPG where you start your own religion in
+                                a procedurally generated fantasy world complete with <span class="consoleMagenta">haunting ASCII graphics</span>.
                             </span>
                             <br/>
                             <br/>
