spacing fix on feature

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                                     <span style="font-weight : bold;">It's time to play god.</span>
                                 </p>
                                 <br/>
-                                <br/>
                                 CultGame is a retro strategy RPG where you start your own religion in
                                 a procedurally generated fantasy world complete with haunting ASCII graphics.
                             </span>
@@ -85,7 +84,7 @@
             <div id="subscribe-button-div" class="row g-0 justify-content-center"
                 style="margin-top : 10px">
                 <div class="col-6" align="center">
-                    <button id="email-list-signup-form-open-btn" class="standardButton" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
+                    <button id="email-list-signup-form-open-btn" class="standardButton btn" data-bs-toggle="modal" data-bs-target="#email-sign-up-modal">
                         Subscribe to our newsletter
                     </button>
                 </div>
@@ -124,7 +123,7 @@
                                             </div>
                                             <div class="optionalParent">
                                                 <div class="clear foot">
-                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn"
                                                         style="background-color: #AA0000;"
                                                         value="Subscribe">
                                                 </div>
