adding page layout to about

--- a/about.html
+++ b/about.html
@@ -1,26 +1,87 @@
+<!DOCTYPE html>
+<html>
 
-<h2>Bucephalus Studios</h2>
+<head>
+    <title>Bucephalus Studios - Home</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- Site Style -->
+    <link rel="stylesheet" href="assets/style.css">
+    <!-- Mailchimp form style -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        #mc_embed_signup {
+            background: #fff;
+            color: #000;
+            clear: left;
+            width: 100%;
+        }
 
-Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated toward making
-interesting, original games that are not plagued by the problems of modern triple-A games like predatory economies,
-huge price tags, and bad player-developer relationships. We are inspired by the golden age of SNES RPGs, the forgotten flash games
-of Newgrounds, and esoteric hits like Dwarf Fortress to create worlds you can lose yourself in.
-<br/>
-We are also a supporter of free open-source software. Check out our software page to see our programs you can download
-for free!
+        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                                        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+</head>
+
+<body>
+    <!--Header layout-->
+    <div id="loaded-header">
+    </div>
+
+    <!--View-->
+    <div id="view" class="container-full-width justify-content-center">
 
 
-<h2>Jeff Stevens</h2>
+        <h2>Bucephalus Studios</h2>
 
-For my professional profile and history, please see <a href="https://www.linkedin.com/in/jeff-s-819217123/">my linkedin</a>.
+        Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
+        toward making
+        interesting, original games that are not plagued by the problems of modern triple-A games like predatory
+        economies,
+        huge price tags, and bad player-developer relationships. We are inspired by the golden age of SNES RPGs, the
+        forgotten flash games
+        of Newgrounds, and esoteric hits like Dwarf Fortress to create worlds you can lose yourself in.
+        <br />
+        We are also a supporter of free open-source software. Check out our software page to see our programs you can
+        download
+        for free!
 
-Hi, I'm Jeff Stevens, and this was me as a kid. (show picture of me playing runescape as a kid)
 
-I'm in my 20s now, and these memories of meeting up with my lunchtable friends in MMORPGs, braving the wild-west of early
-internet forums and image boards, and playing every flash game I could find on Newgrounds made me the game developer I am today.
-I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, but I felt making games
-would be the coolest way to express myself. So that's what I decided to do!
+        <h2>Jeff Stevens</h2>
 
-Nowadays, I work from home doing business as Bucephalus Studios designing games, writing code, and doing the 
-mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work you'll find me doing olympic
-saber fencing, watching horror movies, or cooking up some tikka masala in my kitchen.
+        For my professional profile and history, please see <a href="https://www.linkedin.com/in/jeff-s-819217123/">my
+            linkedin</a>.
+
+        Hi, I'm Jeff Stevens, and this was me as a kid. (show picture of me playing runescape as a kid)
+
+        I'm in my 20s now, and these memories of meeting up with my lunchtable friends in MMORPGs, braving the wild-west
+        of early
+        internet forums and image boards, and playing every flash game I could find on Newgrounds made me the game
+        developer I am today.
+        I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, but I
+        felt making games
+        would be the coolest way to express myself. So that's what I decided to do!
+
+        Nowadays, I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
+        mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work
+        you'll find me doing olympic
+        saber fencing, watching horror movies, or cooking up some tikka masala in my kitchen.
+
+
+    </div>
+
+
+    <div id="loaded-footer">
+    </div>
+
+    <!-- Add javascript before the end of the body -->
+    <script type="text/javascript" src="js/headerLoader.js"></script>
+    <script type="text/javascript" src="js/footerLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
