--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
                     <div>
                         <div>
                             <span>
-                                <p class="consoleRed">
+                                <span class="consoleRed">
                                     Create your own cult, perform demonic rituals, and amass a following that threatens empires.
                                     <span style="font-weight : bold;">It's time to play god.</span>
-                                </p>
+                                </span>
+                                <br/>
                                 <br/>
                                 CultGame is a retro strategy RPG where you start your own religion in
                                 a procedurally generated fantasy world complete with haunting ASCII graphics.
