adding avatar to header

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                                             </div>
                                             <div class="optionalParent">
                                                 <div class="clear foot">
-                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn"
-                                                        style="background-color: #AA0000;"
+                                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn standardButton"
                                                         value="Subscribe">
                                                 </div>
                                             </div>
