--- a/software.html
+++ b/software.html
@@ -33,7 +33,7 @@
             <h2>Software</h2>
             <p>
                 Here, you can find software that we've created and have released to the public for free under various licenses. 
-                We hope you can find a use for it in your own projects!
+                We hope you can find a use for our software in your own projects!
             </p>
             <div id="C++Libraries">
                 <h3>
