working on games page

--- a/games.html
+++ b/games.html
@@ -29,10 +29,20 @@
 
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
-
-            We've only got only we're working on so far, but here it is!
-
-            CultGame
+            <div class="row-g0 justify-content-center">
+                <div class="col-4">
+                    <img src="assets/cultgame-itch-capsule.png">
+                </div>
+                <h2>CultGame</h2>
+                <p>
+                    Create your own cult, perform demonic rituals, and amass a following that threatens empires.
+                    It's time to play god. CultGame is a retro strategy RPG where you start your own religion in
+                    a procedurally generated fantasy world complete with haunting ASCII graphics.
+                </p>
+                <a href="https://bucephalus.itch.io/cultgame">
+                    <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
+                </a>
+            </div>
         </div>
 
 
