testing out formatting for games page

--- a/games.html
+++ b/games.html
@@ -30,18 +30,23 @@
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
             <div class="row-g0 justify-content-center">
-                <div class="col-4">
-                    <img src="assets/cultgame-itch-capsule.png">
+                <div class="col-3 gameCard" align="center">
+                    <img src="assets/cultgame-itch-capsule.png" width="90%" style="border-radius : 5px;">
+                    <div class="gameCardContent">         
+                        <h2>CultGame</h2>
+                        <p align="left">
+                            Create your own cult, perform demonic rituals, and amass a following that threatens empires.
+                            It's time to play god. CultGame is a retro strategy RPG where you start your own religion in
+                            a procedurally generated fantasy world complete with haunting ASCII graphics.
+                        </p>
+                        <span class="consoleYellow">
+                            Currently in development!
+                        </span>
+                        <a href="https://bucephalus.itch.io/cultgame">
+                            <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
+                        </a>
+                    </div>
                 </div>
-                <h2>CultGame</h2>
-                <p>
-                    Create your own cult, perform demonic rituals, and amass a following that threatens empires.
-                    It's time to play god. CultGame is a retro strategy RPG where you start your own religion in
-                    a procedurally generated fantasy world complete with haunting ASCII graphics.
-                </p>
-                <a href="https://bucephalus.itch.io/cultgame">
-                    <img src="assets/itchio-available-badge.svg" width="296px" height="91px" id="itchBadge" style="margin-top : 10px;">
-                </a>
             </div>
         </div>
 
